# pveclib

./: .gitignore  .travis.yml  AUTHORS  CONTRIBUTING.md  ChangeLog.md  MAINTAINERS.txt  Makefile.am  Makefile.in  NEWS  README.md  acinclude.m4  aclocal.m4  commit.txt  configure  configure.ac  generate-changelog.sh  pveclib.spec  src-Makefile.am
doc/: pveclib-doxygen-pveclib.doxy  pveclibmaindox.h
doxygen-doc/html/: annotated.html  classes.html  files.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  index.html  pveclibmaindox_8h_source.html  union____VEC__U__128-members.html  union____VEC__U__128.html  vec__common__ppc_8h.html  vec__common__ppc_8h_source.html  vec__int128__ppc_8h.html  vec__int128__ppc_8h_source.html
doxygen-doc/html/search/: all_63.html  all_76.html  classes_5f.html  defines_76.html  files_76.html  functions_76.html  search.js  typedefs_76.html
doxygen-doc/latex/: annotated.tex  doxygen.sty  files.tex  index.tex  refman.tex  union____VEC__U__128.tex  vec__common__ppc_8h.tex  vec__int128__ppc_8h.tex
src/: Makefile.am  Makefile.in  arith128.h  decpowof2.c  tipowof10.c  vec_bcd_ppc.h  vec_char_ppc.h  vec_common_ppc.h  vec_f128_ppc.h  vec_f128_runtime.c  vec_f32_ppc.h  vec_f64_ppc.h  vec_int128_ppc.h  vec_int128_runtime.c  vec_int16_ppc.h  vec_int32_ppc.h  vec_int512_runtime.c  vec_int64_ppc.h  vec_int64_runtime.c  vec_runtime_DYN.c  vec_runtime_PWR10.c  vec_runtime_PWR7.c  vec_runtime_PWR8.c  vec_runtime_PWR9.c  vec_runtime_common.c
src/pveclib/: vec_bcd_ppc.h  vec_char_ppc.h  vec_common_ppc.h  vec_f128_ppc.h  vec_f32_ppc.h  vec_f64_ppc.h  vec_int128_ppc.h  vec_int16_ppc.h  vec_int32_ppc.h  vec_int512_ppc.h  vec_int64_ppc.h
src/testprograms/: test_ppc_PWR6.c.in
src/testsuite/: arith128.h  arith128_print.c  arith128_print.h  arith128_test_bcd.c  arith128_test_bcd.h  arith128_test_char.c  arith128_test_char.h  arith128_test_f128.c  arith128_test_f128.h  arith128_test_f32.c  arith128_test_f32.h  arith128_test_f64.c  arith128_test_f64.h  arith128_test_i128.c  arith128_test_i128.h  arith128_test_i16.c  arith128_test_i16.h  arith128_test_i32.c  arith128_test_i32.h  arith128_test_i512.c  arith128_test_i512.h  arith128_test_i64.c  arith128_test_i64.h  arith128_test_qpo.c  arith128_test_qpo.h  pveclib_perf.c  pveclib_test.c  vec_bcd_dummy.c  vec_char_dummy.c  vec_dummy_main.c  vec_f128_dummy.c  vec_f32_dummy.c  vec_f64_dummy.c  vec_int128_dummy.c  vec_int16_dummy.c  vec_int32_dummy.c  vec_int512_dummy.c  vec_int64_dummy.c  vec_perf_f128.c  vec_perf_f128.h  (+10 more)
testprograms/: test_ppc_970.c  test_ppc_DFP.c  test_ppc_F128.c  test_ppc_F128arith.c  test_ppc_F128math.c  test_ppc_PWR10.c  test_ppc_PWR7.c  test_ppc_PWR8.c  test_ppc_PWR9.c  test_ppc_VMX.c  test_ppc_VSX.c  test_ppc_bool_int128.c  test_ppc_const_int128.c  test_ppc_int128.c
